frontend/src/components/Overview/_index.scss
.sm-Overview {
    margin-top: 0;
    position: relative;
    border: 1px dashed #dedede;
    padding: 8px;
    border-radius: 4px;
    display: flex;

    &-close {
        position: absolute !important;
        right: 2px;
        font-size: 26px;
        top: 0;
    }

    &-heading {
        background: -webkit-linear-gradient(#0065FF, #FF6666);
        -webkit-background-clip: text;
        -webkit-text-fill-color: transparent;
        font-size: 14px;
        font-weight: 700;
        text-align: center;
        border-bottom: 1px solid #eee;
        margin-bottom: 2px;
        padding-bottom: 4px;
    }

    &-filterpanel {
        height: 100%; /* 100% Full-height */
        width: 0; /* 0 width - change this with JavaScript */
        position: absolute; /* Stay in place */
        z-index: 1; /* Stay on top */
        overflow-x: hidden; /* Disable horizontal scroll */
        transition: 0.3s;
        margin: -8px;
        min-height: 100%;
        background-color: #f9f9f9;
        border-right: 1px dashed #dedede;
        display: flex;
        flex-direction: column;
        
        h6 {
            margin: 10px;
        }
    }

    &-filterpanelClose {
        position: absolute !important;
        left: 200px;
        top: 0;
        font-size: 25px;
    }

    &-filters {
        padding: 10px;
    }

    &-filter {
        position: absolute !important;
        top: 0;
        left: 0;
    }

    &-rightPane {
        display: flex;
        flex-direction: column;
    }

    &-checkboxes {
        margin: 12px 0 12px 6px;
    }

    &-cbLabel > .MuiFormControlLabel-label {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        max-width: 180px;
    }

    #beeswarm {
        display: flex;
        flex-direction: column;
        margin-left: 20px;
    }

    &-charts {
        display: flex;
        flex-direction: row;
    }

    .popover {
        background-color: rgba(0, 0, 0, 0.75);
        border-radius: 3px;
        font-size: 11px;
        border: 1px solid #dedede;
        opacity: 0;
        padding: 4px;
        width: max-content;
        z-index: 999;
        color: white;
        position: absolute !important;
    }

    .axisLabel {
       font-size: 14px;
       font-weight: 500;
       text-transform: capitalize;
    }

    .point-label {
        font-size: 12px;
    }

    &-rangeVal {
        width: 45%;
        
        &:nth-child(0) {
            margin-right: 10px;
        }
    }

    &-rangeChanger {
        display: flex;
        justify-content: space-between;
        margin-left: 5px;

        label {
            font-size: 12px;
        }
    }

    &-legends {
        display: flex;
        justify-content: center;
        padding-bottom: 8px;
        border-bottom: 1px dashed #dedede;
        flex-wrap: wrap;
    }

    &-legendLabel {
        display: flex;
        font-size: 14px;
        font-weight: 500;
        justify-content: center;
    }

    &-legend {
        margin-right: 8px;
        font-size: 13px;
    }

    &-legendColor {
        margin-right: 3px;
    }

    .label-family {
        font-size: 14px;
    }

    .label-family-sparse {
        font-size: 11px;
    }
}

